--- a/css/admin.css
+++ b/css/admin.css
@@ -2,4 +2,8 @@
 .wpsocialtumblelog-options .heading{ margin: 0;}
 .wpsocialtumblelog-options .list_option_content{ margin: 0;}
 
-.wpsocialtumblelog-options .well{ padding:1em 10px; background-color: #f5f5f5; border: 1px solid #e3e3e3; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
+.wpsocialtumblelog-options .well{ padding:1em 10px; clear:both; background-color: #f5f5f5; border: 1px solid #e3e3e3; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
+
+.wpsocialtumblelog-options .social .button{ float:right;}
+.wpsocialtumblelog-options .social .fa{ font-size:3em; vertical-align: middle; display:inline-block; margin:0 15px 0 0;}
+.wpsocialtumblelog-options .social .title{ display:inline-block; margin:0; font-weight: 600; font-size:1.3em;}
