--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,5 @@
-.wpsocialtumblelog-options .heading_text{ padding: 0;}
-.wpsocialtumblelog-options .heading{ margin: 0;}
-.wpsocialtumblelog-options .list_option_content{ margin: 0;}
+.wpsocialtumblelog-options .title{ margin: 8px 0; font-size: 18px; font-weight: 400; line-height: 24px;}
+.wpsocialtumblelog-options .title .fa{ vertical-align: middle; margin:0 0 0 7px; font-weight: 100; }
 
 .wpsocialtumblelog-options .well{ padding:1em 10px; clear:both; background-color: #f5f5f5; border: 1px solid #e3e3e3; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
 
@@ -10,15 +9,18 @@
 
 .rectangle-list{ counter-reset: li; /* Initiate a counter */ list-style: none; /* Remove default numbering */ *list-style: decimal; /* Keep using default numbering for IE6/7 */ padding: 0; margin: 20px 0; text-shadow: 0 1px 0 rgba(255,255,255,.5); }
 
-.rectangle-list a{ cursor:pointer; -webkit-border-radius:2px; border-radius:2px; position: relative; display: block; padding: .4em .4em .4em .8em; *padding: .4em; margin: .5em 0 .5em 2.5em; background: #ddd; color: #444; text-decoration: none; transition: all .3s ease-out; }
-.rectangle-list a:hover{ background: #eee;}       
-.rectangle-list a:before, .rectangle-list a::before{ -webkit-border-radius:2px; border-radius:2px; content: counter(li); counter-increment: li; position: absolute; left: -2.5em; top: 50%; margin-top: -1em; background: rgb(65,180,255); height: 2em; width: 2em; line-height: 2em; text-align: center; font-weight: bold; color:#fff; }
-.rectangle-list li:nth-child(odd) a:before, .rectangle-list li:nth-child(odd) a::before{ background:#156DA6; }
-.rectangle-list a:after,.rectangle-list a::after{ position: absolute; content: ''; border: .5em solid transparent; border-left-color: rgb(65,180,255); top: 50%; left: -.5em; margin-top: -.5em; transition: all .3s ease-out;  }
-.rectangle-list li:nth-child(odd) a:after, .rectangle-list li:nth-child(odd) a::after{ border-left-color: #156DA6;  } 
+.rectangle-list li{ cursor:pointer; -webkit-border-radius:2px; font-size:1.1em; border-radius:2px; position: relative; display: block; padding: .4em .8em .4em .8em; *padding: .4em; margin: .5em 0 .5em 2.5em; background: #ddd; color: #444; text-decoration: none; transition: all .5s ease-out; }
+.rectangle-list li:hover{ background: #eee;}       
+.rectangle-list li:before, .rectangle-list li::before{ -webkit-border-radius:2px; border-radius:2px; content: counter(li); counter-increment: li; position: absolute; left: -2.5em; top: 50%; margin-top: -1em; background: rgb(65,180,255); height: 2em; width: 2em; line-height: 2em; text-align: center; font-weight: bold; color:#fff; }
+.rectangle-list li:nth-child(odd):before, .rectangle-list li:nth-child(odd)::before{ background:#156DA6; }
+.rectangle-list li:after,.rectangle-list li::after{ position: absolute; content: ''; border: .5em solid transparent; border-left-color: rgb(65,180,255); top: 50%; left: -.5em; margin-top: -.5em; transition: all .3s ease-out;  }
+.rectangle-list li:nth-child(odd):after, .rectangle-list li:nth-child(odd)::after{ border-left-color: #156DA6;  } 
 
-#WPSocialTumblelog_options_spinner{ display:none; vertical-align: text-top; margin:0 0 0 10px; }
-#WPSocialTumblelog_options_error{ color:red; display:none;}
-#WPSocialTumblelog_options_feed.error{
+#wpsocial-tumblelog-options-list li .delete{ display:none; float:right; font-size:1.35em; color:#666; transition: color 0.5s;}
+#wpsocial-tumblelog-options-list li .delete:hover{ color:#111;}
+#wpsocial-tumblelog-options-list li:hover .delete{ display:inline-block; }
+#wpsocial-tumblelog-options-spinner{ display:none; vertical-align: middle; margin:0 0 5px 5px; }
+#wpsocial-tumblelog-options-error, #wpsocial-tumblelog-options-error-primary{ color:red; display:none; margin-top:0;}
+#wpsocial-tumblelog-options-feed.error{
 	border:1px solid red;
 }
