--- a/css/admin.css
+++ b/css/admin.css
@@ -1,12 +1,6 @@
 .wpsocialtumblelog-options .title{ margin: 8px 0; font-size: 18px; font-weight: 400; line-height: 24px;}
 .wpsocialtumblelog-options .title .fa{ vertical-align: middle; margin:0 0 0 7px; font-weight: 100; }
 
-.wpsocialtumblelog-options .well{ padding:1em 10px; clear:both; background-color: #f5f5f5; border: 1px solid #e3e3e3; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); }
-
-.wpsocialtumblelog-options .social .button{ float:right;}
-.wpsocialtumblelog-options .social .fa{ font-size:3em; vertical-align: middle; display:inline-block; margin:0 15px 0 0;}
-.wpsocialtumblelog-options .social .title{ display:inline-block; margin:0; font-weight: 600; font-size:1.3em;}
-
 .rectangle-list{ counter-reset: li; /* Initiate a counter */ list-style: none; /* Remove default numbering */ *list-style: decimal; /* Keep using default numbering for IE6/7 */ padding: 0; margin: 20px 0; text-shadow: 0 1px 0 rgba(255,255,255,.5); }
 
 .rectangle-list li{ cursor:pointer; -webkit-border-radius:2px; font-size:1.1em; border-radius:2px; position: relative; display: block; padding: .4em 0.8em .4em .8em; *padding: .4em; margin: .5em 0 .5em 2.5em; background: #ddd; color: #444; text-decoration: none; transition: all .5s ease-out; }
@@ -16,6 +10,8 @@
 .rectangle-list li:after,.rectangle-list li::after{ position: absolute; content: ''; border: .5em solid transparent; border-left-color: rgb(65,180,255); top: 50%; left: -.5em; margin-top: -.5em; transition: all .3s ease-out;  }
 .rectangle-list li:nth-child(odd):after, .rectangle-list li:nth-child(odd)::after{ border-left-color: #156DA6;  } 
 
+
+/* RSS */
 #wpsocial-tumblelog-options-list li .feed{ white-space: nowrap; overflow: hidden; text-overflow: ellipsis; margin-right: 1.5em;}
 #wpsocial-tumblelog-options-list li .delete{ display:none; float:right; font-size:1.25em; color:#666; transition: color 0.5s;}
 #wpsocial-tumblelog-options-list li .delete:hover{ color:#111;}
@@ -25,3 +21,7 @@
 #wpsocial-tumblelog-options-feed.error{
 	border:1px solid red;
 }
+
+/* SOCIAL */
+#wpsocial-error, #wpsocial-error-primary{ color:red; display:none; margin-top:0;}
+#wpsocial-spinner{ display:none; vertical-align: middle; margin:0 0 5px 5px; }
